// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bulk applies permission template 1`] = `
<BulkApplyTemplateModal
  onClose={[Function]}
  provisioned={false}
  qualifier="TRK"
  query=""
  selection={[]}
  total={17}
/>
`;

exports[`deletes projects 1`] = `
<DeleteModal
  onClose={[Function]}
  onConfirm={[Function]}
  provisioned={false}
  qualifier="TRK"
  query=""
  selection={
    [
      "foo",
      "bar",
    ]
  }
  total={17}
/>
`;

exports[`render qualifiers filter 1`] = `
<div
  className="big-spacer-bottom"
>
  <table
    className="data"
  >
    <tbody>
      <tr>
        <td
          className="thin text-middle"
        >
          <Checkbox
            checked={false}
            id="projects-selection"
            onCheck={[Function]}
            thirdState={false}
            title="check_all"
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <Select
            className="input-medium it__project-qualifier-select"
            components={
              {
                "Option": [Function],
                "SingleValue": [Function],
              }
            }
            isDisabled={false}
            isSearchable={false}
            name="projects-qualifier"
            onChange={[Function]}
            options={
              [
                {
                  "label": "qualifiers.TRK",
                  "value": "TRK",
                },
                {
                  "label": "qualifiers.VW",
                  "value": "VW",
                },
                {
                  "label": "qualifiers.APP",
                  "value": "APP",
                },
              ]
            }
            value={
              {
                "label": "qualifiers.TRK",
                "value": "TRK",
              }
            }
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <DateInput
            inputClassName="input-medium"
            name="analyzed-before"
            onChange={[MockFunction]}
            placeholder="last_analysis_before"
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <Select
            className="input-small"
            isDisabled={false}
            isSearchable={false}
            name="projects-visibility"
            onChange={[Function]}
            options={
              [
                {
                  "label": "visibility.both",
                  "value": "all",
                },
                {
                  "label": "visibility.public",
                  "value": "public",
                },
                {
                  "label": "visibility.private",
                  "value": "private",
                },
              ]
            }
            value={
              {
                "label": "visibility.both",
                "value": "all",
              }
            }
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <Checkbox
            checked={false}
            className="link-checkbox-control"
            id="projects-provisioned"
            onCheck={[MockFunction]}
            thirdState={false}
          >
            <span
              className="text-middle little-spacer-left"
            >
              provisioning.only_provisioned
            </span>
          </Checkbox>
          <HelpTooltip
            className="spacer-left"
            overlay="provisioning.only_provisioned.tooltip"
          />
        </td>
        <td
          className="text-middle"
        >
          <SearchBox
            minLength={3}
            onChange={[MockFunction]}
            placeholder="search.search_by_name_or_key"
            value=""
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <Button
            className="js-bulk-apply-permission-template"
            disabled={true}
            onClick={[Function]}
          >
            permission_templates.bulk_apply_permission_template
          </Button>
          <Button
            className="js-delete spacer-left button-red"
            disabled={true}
            onClick={[Function]}
            title="permission_templates.select_to_delete"
          >
            delete
          </Button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders 1`] = `
<div
  className="big-spacer-bottom"
>
  <table
    className="data"
  >
    <tbody>
      <tr>
        <td
          className="thin text-middle"
        >
          <Checkbox
            checked={false}
            id="projects-selection"
            onCheck={[Function]}
            thirdState={false}
            title="check_all"
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <DateInput
            inputClassName="input-medium"
            name="analyzed-before"
            onChange={[MockFunction]}
            placeholder="last_analysis_before"
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <Select
            className="input-small"
            isDisabled={false}
            isSearchable={false}
            name="projects-visibility"
            onChange={[Function]}
            options={
              [
                {
                  "label": "visibility.both",
                  "value": "all",
                },
                {
                  "label": "visibility.public",
                  "value": "public",
                },
                {
                  "label": "visibility.private",
                  "value": "private",
                },
              ]
            }
            value={
              {
                "label": "visibility.both",
                "value": "all",
              }
            }
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <Checkbox
            checked={false}
            className="link-checkbox-control"
            id="projects-provisioned"
            onCheck={[MockFunction]}
            thirdState={false}
          >
            <span
              className="text-middle little-spacer-left"
            >
              provisioning.only_provisioned
            </span>
          </Checkbox>
          <HelpTooltip
            className="spacer-left"
            overlay="provisioning.only_provisioned.tooltip"
          />
        </td>
        <td
          className="text-middle"
        >
          <SearchBox
            minLength={3}
            onChange={[MockFunction]}
            placeholder="search.search_by_name_or_key"
            value=""
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <Button
            className="js-bulk-apply-permission-template"
            disabled={true}
            onClick={[Function]}
          >
            permission_templates.bulk_apply_permission_template
          </Button>
          <Button
            className="js-delete spacer-left button-red"
            disabled={true}
            onClick={[Function]}
            title="permission_templates.select_to_delete"
          >
            delete
          </Button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders optionrenderer and singlevaluerenderer: option renderer 1`] = `
<Option
  data={
    {
      "value": "val",
    }
  }
>
  <div
    className="display-flex-center"
  >
    <QualifierIcon
      className="little-spacer-right"
      qualifier="val"
    />
  </div>
</Option>
`;

exports[`renders optionrenderer and singlevaluerenderer: single value renderer 1`] = `
<SingleValue
  data={
    {
      "value": "val",
    }
  }
>
  <div
    className="display-flex-center"
  >
    <QualifierIcon
      className="little-spacer-right"
      qualifier="val"
    />
  </div>
</SingleValue>
`;
